# performance_test_fixture

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  performance_test_fixture-extras.cmake
cmake/: add_performance_test.cmake
include/performance_test_fixture/: common.hpp  mimick_memory_manager.hpp  mimick_performance_test_fixture.hpp  performance_test_fixture.hpp
src/: memory_aware_benchmark_main.cpp  memory_aware_console_reporter.cpp  memory_aware_console_reporter.hpp  mimick_memory_manager.cpp  mimick_performance_test_fixture.cpp  mimick_utils.hpp  performance_test_fixture.cpp
test/benchmark/: benchmark_malloc_realloc.cpp  benchmark_malloc_realloc_mimick.cpp  benchmark_malloc_realloc_no_memory_tools.cpp  benchmark_pause_resume.cpp
